# ieta-pipeline-demo

./: .gitignore  README.md  cleanup.ps1  cleanup.sh  dev.ps1  dev.sh  install.ps1  install.sh
api/: lms.py  main.py  pyproject.toml  sis.py  state.py
api/data/: attendance.parquet  gradebook.parquet  isat_data.parquet
api/scripts/: generate_seeds.py
dagster-demo/: README.md  pyproject.toml
dagster-demo/src/dagster_demo/: definitions.py
dagster-demo/src/dagster_demo/defs/: assets.py
dagster-demo/src/dagster_demo/defs/dbt_project/: defs.yaml
dagster-demo/src/dagster_demo/resources/: __init__.py  duckdb.py  ieta_api.py  lms_api.py  sis_api.py  state_api.py
dbt-demo/: .user.yml  dbt_project.yml  dev.duckdb  dev.duckdb.wal  profiles.yml  pyproject.toml
dbt-demo/models/dimensions/: dim_assignment.sql  dim_course.sql  dim_date.sql  dim_section.sql  dim_student.sql  schema.yml
dbt-demo/models/facts/: fct_assessment.sql  fct_attendance.sql  fct_grade.sql  fct_student_snapshot.sql  schema.yml
dbt-demo/models/marts/: mart_class_summary.sql  mart_student_dashboard.sql  schema.yml
dbt-demo/models/staging/: schema.yml  sources.yml  stg_attendance.sql  stg_gradebook.sql  stg_isat.sql  stg_sample_data.sql
dbt-demo/seeds/: attendance.csv  buzz_gradebook.csv  isat_data.csv
