[project]
name = "dagster_demo"
requires-python = ">=3.10,<3.15"
version = "0.1.0"
dependencies = [
    "dagster==1.12.13",
    "dagster-dbt>=0.28.13",
    "dbt-duckdb>=1.10.0",
    "duckdb>=1.4.4",
    "httpx>=0.28.1",
    "pandas>=2.3.3",
]

[dependency-groups]
dev = [
    "dagster-webserver",
    "dagster-dg-cli",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
force-include = { "pyproject.toml" = "pyproject.toml" }

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "dagster_demo"
registry_modules = [
    "dagster_demo.components.*",
]


